@@ -1,3 +1,10 @@
+2007-12-27  Eric S. Raymond  <esr@snark.thyrsus.com>
+
+	* vc.el (vc-dired-ignorable-p, vc-dired-hook): Speed optimization;
+	use completion-ignored-extensions to detect files that should be
+	ignorted in VC-Dired listings, heading off lots of expensive calls
+	to (vc-state).
+
 2007-12-27  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
 
 	* ps-print.el (ps-mark-active-p): Fun returned back.
@@ -6,8 +13,8 @@
 
 2007-12-27  Eric S. Raymond  <esr@snark.thyrsus.com>
 
-	* (vc.el, vc-sccs.el, vc-rcs.el, vc-cs.el, vc-mcvs.el): Put
-	machinery in place to support editing of change comments
+	* vc.el, vc-sccs.el, vc-rcs.el, vc-cs.el, vc-mcvs.el: Put
+	new machinery in place to support editing of change comments
 	with 'e' in a log-view buffer.  Not documented yet as this
 	only works for SCCS, RCS, and maybe CVS if you have admin
 	privileges.  When we have backend support for Subversion and
